gitops/platform-apps/hedgedoc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
  namespace: hedgedoc
  labels:
    app.kubernetes.io/name: hedgedoc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hedgedoc
  ports:
    - name: http
      port: 80
      targetPort: http
